rust/kcl-lib/tests/error_inside_fn_also_has_source_range_of_call_site_recursive/execution_error.snap
---
source: kcl-lib/src/simulation_tests.rs
description: Error from executing error_inside_fn_also_has_source_range_of_call_site_recursive.kcl
---
KCL Semantic error

  × semantic: The input argument of `startSketchOn` requires a value with type
  │ `Solid` or a value with type `Plane` (`Solid | Plane`), but found a value
  │ with type `string`.
   ╭─[3:9]
 2 │     fn someNestedFunction(@something2) {
 3 │         startSketchOn(something2)
   ·         ────────────┬────────────┬
   ·                     │            ╰── tests/error_inside_fn_also_has_source_range_of_call_site_recursive/input.kcl
   ·                     ╰── tests/error_inside_fn_also_has_source_range_of_call_site_recursive/input.kcl
 4 │     }
 5 │ 
 6 │     someNestedFunction(something)
   ·     ──────────────┬──────────────
   ·                   ╰── tests/error_inside_fn_also_has_source_range_of_call_site_recursive/input.kcl
 7 │ }
 8 │ 
 9 │ someFunction('INVALID')
   · ───────────┬───────────
   ·            ╰── tests/error_inside_fn_also_has_source_range_of_call_site_recursive/input.kcl
   ╰────
  ├─▶ KCL Semantic error
  │   
  │     × semantic: The input argument of `startSketchOn` requires a value
  │     │ with type `Solid` or a value with type `Plane` (`Solid | Plane`),
  │     │ but found a value with type `string`.
  │      ╭─[3:23]
  │    2 │     fn someNestedFunction(@something2) {
  │    3 │         startSketchOn(something2)
  │      ·                       ─────┬────
  │      ·                            ╰── tests/
  │   error_inside_fn_also_has_source_range_of_call_site_recursive/input.kcl
  │    4 │     }
  │      ╰────
  ├─▶ KCL Semantic error
  │   
  │     × semantic: The input argument of `startSketchOn` requires a value
  │     │ with type `Solid` or a value with type `Plane` (`Solid | Plane`),
  │     │ but found a value with type `string`.
  │      ╭─[3:9]
  │    2 │     fn someNestedFunction(@something2) {
  │    3 │         startSketchOn(something2)
  │      ·         ────────────┬────────────
  │      ·                     ╰── tests/
  │   error_inside_fn_also_has_source_range_of_call_site_recursive/input.kcl
  │    4 │     }
  │      ╰────
  ╰─▶ KCL Semantic error
      
        × semantic: The input argument of `startSketchOn` requires a value
        │ with type `Solid` or a value with type `Plane` (`Solid | Plane`),
        │ but found a value with type `string`.
         ╭─[6:5]
       5 │
       6 │     someNestedFunction(something)
         ·     ──────────────┬──────────────
         ·                   ╰── tests/
      error_inside_fn_also_has_source_range_of_call_site_recursive/input.kcl
       7 │ }
         ╰────
